--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/react": "^18.0.15",
+    "react": "^18.2.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
