--- a/lib/package.json
+++ b/lib/package.json
@@ -9,7 +9,10 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/react": "^18.0.15",
-    "rollup": "^2.77.2"
+    "rollup": "^2.77.2",
+    "rollup-plugin-typescript2": "^0.32.1"
   }
 }
